[package]
name = "http2"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bitflags = "1.3"
clap = "2.33"
dashmap = "4.0"
enum-map = "1.1"
env_logger = "0.9"
hpack = "0.3"
log = "0.4"
maplit = "1.0"
num-derive = "0.3"
num-traits = "0.2"
rustls = "0.20"
thiserror = "1.0"
url = "2.2"
webpki-roots = "0.22"