[package]
name = "http2"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bitflags = "1.3"
bytes = "1.1"
clap = "2.33"
derivative = "2.2"
derive_more = "0.99"
enum-map = "1.1"
env_logger = "0.9"
hpack = "0.3"
log = "0.4"
maplit = "1.0"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0"
tokio-rustls = "0.23"
url = "2.2"
webpki-roots = "0.22"

[dependencies.tokio]
version = "1.13"
features = ["rt-multi-thread", "sync", "macros", "net", "io-util"]

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
optional = true

[features]
default = ["json"]
json = ["serde", "serde_json"]
